--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "babel-preset-react-native-stage-0": "^1.0.1",
     "prop-types": "^15.6.1",
     "react": "16.2.0",
-    "react-native": "0.53.3"
+    "react-native": "0.53.3",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "22.4.1",
