--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "16.2.0",
     "react-native": "0.53.3",
     "react-native-hyperlink": "0.0.12",
+    "react-native-linear-gradient": "^2.4.0",
     "react-native-vector-icons": "^4.5.0",
     "react-redux": "^5.0.7",
     "realm": "^2.2.12",
