--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@expo/ex-navigation": "^4.2.0",
     "babel-preset-react-native-stage-0": "^1.0.1",
+    "eslint": "^4.18.2",
     "linking": "0.1.0-beta.5",
     "moment": "^2.20.1",
     "prop-types": "^15.6.1",
